--- a/src/sass/modules/js/_tabs.scss
+++ b/src/sass/modules/js/_tabs.scss
@@ -61,6 +61,7 @@
 
                     a {
                         border-bottom-color: transparent;
+                        border-bottom-width: 2px;
                     }
                 }
             }
